--- a/ColorPicker/App.config
+++ b/ColorPicker/App.config
@@ -15,7 +15,19 @@
                 <value>0</value>
             </setting>
             <setting name="ColorType" serializeAs="String">
-                <value />
+                <value>HEX</value>
+            </setting>
+            <setting name="BootWithCaptureEnabled" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="CaptureColorOnSelf" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="IsFirstBoot" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="SetWindowPosOnStartup" serializeAs="String">
+                <value>True</value>
             </setting>
         </ColorPicker.Properties.Settings>
         <ColorPicker.Settings>
