add global hotkey settings and improve settings UI

--- a/ColorPicker/App.config
+++ b/ColorPicker/App.config
@@ -29,6 +29,12 @@
             <setting name="SetWindowPosOnStartup" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="GlobalHotkey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GlobalHotkeyEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ColorPicker.Properties.Settings>
         <ColorPicker.Settings>
             <setting name="WindowTop" serializeAs="String">
