--- a/ColorPicker/App.config
+++ b/ColorPicker/App.config
@@ -33,7 +33,7 @@
                 <value />
             </setting>
             <setting name="GlobalHotkeyEnabled" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
         </ColorPicker.Properties.Settings>
         <ColorPicker.Settings>
