--- a/ColorPicker/App.config
+++ b/ColorPicker/App.config
@@ -21,7 +21,7 @@
                 <value>True</value>
             </setting>
             <setting name="CaptureColorOnSelf" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="IsFirstBoot" serializeAs="String">
                 <value>True</value>
