--- a/ColorPicker/Properties/Settings.settings
+++ b/ColorPicker/Properties/Settings.settings
@@ -15,7 +15,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="CaptureColorOnSelf" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="IsFirstBoot" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
