Minor touchups + Zoomlevel

--- a/ColorPicker/App.config
+++ b/ColorPicker/App.config
@@ -21,7 +21,7 @@
                 <value>True</value>
             </setting>
             <setting name="CaptureColorOnSelf" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="IsFirstBoot" serializeAs="String">
                 <value>True</value>
@@ -34,6 +34,12 @@
             </setting>
             <setting name="GlobalHotkeyEnabled" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="SetZoomLevelOnStartup" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ZoomLevel" serializeAs="String">
+                <value>19</value>
             </setting>
         </ColorPicker.Properties.Settings>
         <ColorPicker.Settings>
