--- a/ColorPicker/ColorPicker.csproj
+++ b/ColorPicker/ColorPicker.csproj
@@ -1,7 +1,7 @@
 ﻿ <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyName>ColorPick</AssemblyName>
+    <AssemblyName>ColorGrab</AssemblyName>
     <AppVersion>1.0.1</AppVersion>
     <TargetFramework>net9.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
